--- a/package.json
+++ b/package.json
@@ -4,12 +4,26 @@
   "description": "landing page for ournat.",
   "main": "index.js",
   "scripts": {
-    "compile-sass" : "node-sass sass/main.scss css/style.css -w" 
+    "watch-sass": "node-sass sass/main.scss css/style.css -w",
+    "devserver": "live-server",
+    "start": "npm-run-all --parallel devserver watch-sass",
 
+
+    "compile-sass": "node-sass sass/main.scss css/style.compiled.css",
+    "concat-css": "concat -o css/style.concat.css css/icon-font.css css/style.compiled.css",
+    "prefix-css": "postcss --use autoprefixer -b last 10 versions css/style.concat.css -o css/style.prefix.css",
+    "compress-css": "node-sass css/style.concat.css css/style.css --output-style compressed ",
+    
+    "build-css": "npm-run-all compile-sass concat-css compress-css "
   },
-  "author": "",
+  "author": "Simranjeet Singh",
   "license": "ISC",
   "devDependencies": {
     "node-sass": "^4.14.1"
+  },
+  "dependencies": {
+    "autoprefixer": "^9.8.5",
+    "concat": "^1.0.3",
+    "postcss-cli": "^7.1.1"
   }
 }
